--- a/include/css/style.css
+++ b/include/css/style.css
@@ -420,7 +420,7 @@ body {
   line-height: 24px;
   font-weight: 400;
   /* font-family: "Montserrat", sans-serif; */
-  font-family: "Ysabeau SC", sans-serif;
+  font-family: "Cormorant SC", serif;
   color: #000;
   background: #fff;
   -webkit-font-smoothing: antialiased;
