--- a/include/css/style.css
+++ b/include/css/style.css
@@ -423,6 +423,7 @@ body {
   font-family: "Cormorant SC", serif;
   color: #000;
   background: #fff;
+  /* background: #efeeea; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow-y: scroll;
@@ -656,8 +657,9 @@ ul:not([class]) > li:before {
   padding: 0;
   margin: 0;
 }
-.navbar-expand-xl .navbar-nav .nav-link.active {
-  color: #c89d89;
+.navbar-expand-xl .navbar-nav .nav-link.active,
+.fixed .navbar-expand-xl .navbar-nav .nav-link.active {
+  color: #c89d89 !important;
 }
 .fixed .navbar-expand-xl .navbar-nav .nav-link {
   color: #333;
@@ -952,6 +954,10 @@ ul:not([class]) > li:before {
   color: #fff;
   cursor: pointer;
   transition: all 0.5s;
+}
+.banner-text-item span {
+  font-size: 16px;
+  font-weight: 700;
 }
 .banner-text-item:hover {
   opacity: 1;
@@ -1388,7 +1394,7 @@ h2.rv_name {
   background: #000;
   left: 0;
   top: 0;
-  opacity: 0.5;
+  opacity: 0.3;
 }
 
 .breadcrumb-section-two {
@@ -3243,6 +3249,7 @@ h2.rv_name {
 #footer {
   background: #efeeea;
   padding: 40px 0;
+  border-top: 1px solid rgba(0, 0, 0, 0.25);
 }
 .footer-content {
   display: flex;
@@ -3444,9 +3451,10 @@ h2.rv_name {
   .navbar-collapse,
   .navbar-collapse.collapsing {
     position: fixed;
-    top: 80px;
+    top: 0px;
     left: 0;
-    background: #efeeea;
+    /* background: #efeeea; */
+    background-color: #000000d6;
     padding: 0;
     z-index: 99;
     margin: 0;
@@ -3458,8 +3466,18 @@ h2.rv_name {
     display: block !important;
     transition: all 0.3s cubic-bezier(0.77, 0.2, 0.05, 1);
   }
+  .fixed .navbar-collapse,
+  .fixed .navbar-collapse.collapsing {
+    background: #efeeea;
+  }
+  .navbar-expand-xl .navbar-nav .nav-link {
+    color: #fff !important;
+  }
+  .fixed .navbar-expand-xl .navbar-nav .nav-link {
+    color: #333 !important;
+  }
   .navbar .collapse.show {
-    height: calc(100vh - 80px);
+    height: calc(100vh - 0px);
   }
   .navbar-inside {
     height: calc(100vh - 80px);
@@ -3516,6 +3534,7 @@ h2.rv_name {
   .navbar-inside {
     height: 100%;
     justify-content: flex-start;
+    padding-top: 80px;
   }
   .navbar-toggler:focus {
     box-shadow: none;
@@ -3539,10 +3558,39 @@ h2.rv_name {
   .gallery-content img,
   .gallery-content-item {
     height: 100%;
+    width: 100%;
   }
   .slidein-text {
     font-size: 24px;
   }
+  .shop-top-bar.shop-top-bar-flex {
+    flex-wrap: wrap;
+  }
+  .shop-topbar-left {
+    display: flex;
+  }
+
+  .shop-top-bar .shop-topbar-right.shop-tab-flex {
+    justify-content: space-between;
+    width: 100%;
+    padding-bottom: 20px;
+  }
+  .counterup__banner--inner {
+    flex-wrap: wrap;
+    justify-content: center !important;
+    gap: 20px;
+  }
+  .counterup__banner--items__text {
+    font-size: 1.5rem;
+    margin: 0;
+  }
+  .counterup__banner--items__number {
+    font-size: 2.5rem;
+    line-height: 3rem;
+  }
+  /* #header {
+    background: #000000d6;
+  } */
   /* ==================== footer ========================== */
   .footer-content {
     flex-wrap: wrap;
@@ -3574,10 +3622,10 @@ h2.rv_name {
   }
   .navbar-collapse,
   .navbar-collapse.collapsing {
-    top: 60px;
+    top: 0px;
   }
   .navbar .collapse.show {
-    height: calc(100vh - 60px);
+    height: calc(100vh - 0px);
   }
   .navbar-inside {
     height: calc(100vh - 60px);
@@ -3640,6 +3688,7 @@ h2.rv_name {
     gap: 30px;
     justify-content: center;
     text-align: center;
+    background: #efeeea;
   }
   .gallery-content {
     grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -3650,9 +3699,16 @@ h2.rv_name {
     margin-bottom: 20px;
     text-align: center;
   }
+  .shop-page-area-content .row {
+    margin: 0;
+    width: 100%;
+  }
 }
 /* ======================================================
  ! Extra small devices (portrait phones, less than 576px)
  ====================================================== */
 @media (max-width: 575.98px) {
+  .banner-text h1 {
+    font-size: 40px;
+  }
 }
