--- a/include/css/style.css
+++ b/include/css/style.css
@@ -363,6 +363,8 @@
 .slick-dots li:hover button {
   opacity: 1;
   background-color: #000;
+  width: 30px;
+  border-radius: 30px;
 }
 .white-dots .slick-dots li button {
   border-color: #fff;
